--- a/EigenCAM_on_fastRCNN.ipynb
+++ b/EigenCAM_on_fastRCNN.ipynb
@@ -34,13 +34,13 @@
    "outputs": [],
    "source": [
     "# This is your directory path to Salicon images\n",
-    "path_to_images = r\"C:\\Users\\LEMON\\Documents\\FAU\\Vision\\val\\Images_val\"\n",
+    "path_to_images = \"...Your path/val/Images_val\"\n",
     "\n",
     "# This is your directory path to ground truth saliency maps\n",
-    "path_to_maps = r\"C:\\Users\\LEMON\\Documents\\FAU\\Vision\\val\\Maps_val\"\n",
+    "path_to_maps = \"...Your path/val/Maps_val\"\n",
     "\n",
     "# This is where you will save results to\n",
-    "save_path = r'C:\\Users\\LEMON\\Documents\\FAU\\Vision\\backup_test.npy'\n",
+    "save_path = \"...Your path/backup.npy\"\n",
     "\n",
     "# Turn recovery mode to True if you want to use a backup \n",
     "recovery_mode = False\n"
