--- a/EigenCAM_on_fastRCNN.ipynb
+++ b/EigenCAM_on_fastRCNN.ipynb
@@ -34,13 +34,13 @@
    "outputs": [],
    "source": [
     "# This is your directory path to Salicon images\n",
-    "path_to_images = \"...Your path/val/Images_val\"\n",
+    "path_to_images = r\"C:\\Users\\LEMON\\Documents\\FAU\\Vision\\val\\Images_val\"\n",
     "\n",
     "# This is your directory path to ground truth saliency maps\n",
-    "path_to_maps = \"...Your path/val/Maps_val\"\n",
+    "path_to_maps = r\"C:\\Users\\LEMON\\Documents\\FAU\\Vision\\val\\Maps_val\"\n",
     "\n",
     "# This is where you will save results to\n",
-    "save_path = \"...Your path/backup.npy\"\n",
+    "save_path = r'C:\\Users\\LEMON\\Documents\\FAU\\Vision\\backup.npy'\n",
     "\n",
     "# Turn recovery mode to True if you want to use a backup \n",
     "recovery_mode = False\n"
@@ -745,7 +745,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def deep_dive(image_loc, saliency_path, title, orig_cor, CAMS=[]):\n",
+    "def deep_dive(image_loc, saliency_path, title, orig_cor, CAMS=[], invert=False):\n",
     "\n",
     "    image = np.array(Image.open(image_loc))\n",
     "    image_float_np = np.float32(image) / 255\n",
@@ -777,7 +777,8 @@
     "\n",
     "    # Make EigenCAM maps for 3 spatial dimensions\n",
     "    cor_after = -100.00 # This is the max of FPN layer 2 and layer 3 dimensions\n",
-    "    \n",
+    "    layer_after = 0\n",
+    "\n",
     "    for i in range (2,5):\n",
     "\n",
     "        if i != 4:\n",
@@ -804,6 +805,10 @@
     "        # Take the first image in the batch (there's just only one in this implementation)\n",
     "        grayscale_cam = grayscale_cam[0, :] # Take all rows and columns\n",
     "\n",
+    "        # Do an experimental flip of signs to get \"correct\" signs\n",
+    "        if i == 4 and invert == True:\n",
+    "            grayscale_cam = -grayscale_cam\n",
+    "\n",
     "        # Apply \"Fairness\" Blur (sigma = 19)\n",
     "        # This converts the \"Blocky/Grid\" activation into a \"Probability\" distribution matching the SALICON style.\n",
     "        smooth_cam = gaussian_filter(grayscale_cam, sigma=19)\n",
@@ -817,22 +822,29 @@
     "        CAMS.append(smooth_cam_image)\n",
     "\n",
     "        # Check which correlation is larger, replace if needed\n",
-    "        if i != 4:\n",
-    "            \n",
-    "            cc = SaliencyMetrics.cc_mask(smooth_cam, gt_saliency_np)\n",
-    "            if cor_after < cc:\n",
-    "                cor_after = cc\n",
+    "\n",
+    "        cc = SaliencyMetrics.cc_mask(smooth_cam, gt_saliency_np)\n",
+    "        if cor_after < cc:\n",
+    "            cor_after = cc\n",
+    "            layer_after = str(i) \n",
+    "\n",
+    "    if layer_after == '2':\n",
+    "        layer_after = f\"(FPN layer {layer_after}, 30x40)\"\n",
+    "    elif layer_after == '3':\n",
+    "        layer_after = f\"(FPN layer {layer_after}, 15x20)\"\n",
+    "    else:\n",
+    "        layer_after = f\"(FPN pool layer, 8x10)\"\n",
     "\n",
     "    fig, axes = plt.subplots(1, 5, figsize=(18, 6))\n",
     "\n",
-    "    fig.suptitle(f\"Spatial Comparison Image ID: {title} \\n Default Cor: {orig_cor:.02} ------ Cor After: {cor_after:.02}\", fontsize=20)\n",
+    "    fig.suptitle(f\"Spatial Comparison Image ID: {title} \\n Default Cor: {orig_cor:.02} ------ Cor After: {cor_after:.02} {layer_after}\", fontsize=20)\n",
     "\n",
     "    axes[0].imshow(image_float_np)\n",
     "    axes[0].set_title('Original Image', fontsize=14)\n",
     "    axes[0].axis('off')\n",
     "\n",
     "    axes[1].imshow(CAMS[-1])\n",
-    "    axes[1].set_title('8x10 (Extreme blurring)', fontsize=14)\n",
+    "    axes[1].set_title('8x10 (Pool Flipped)', fontsize=14)\n",
     "    axes[1].axis('off')\n",
     "\n",
     "    axes[2].imshow(CAMS[-2])\n",
@@ -852,7 +864,8 @@
     "        \n",
     "    # Delete cam\n",
     "    del cam   \n",
-    "    gc.collect()\n"
+    "    gc.collect()\n",
+    "    "
    ]
   },
   {
@@ -865,7 +878,7 @@
     "# Do a deeper dive into bottom n by changing spatial dimensions\n",
     "\n",
     "# Top n images to look at\n",
-    "n = 5\n",
+    "n = 25\n",
     "\n",
     "# Display least correlated images\n",
     "\n",
@@ -877,7 +890,7 @@
     "    title = bot_sorted_keys[i][0][-12:]\n",
     "    orig_cor = main_dict[bot_sorted_keys[i][0]][-1][-1]['CC_mask']\n",
     "\n",
-    "    deep_dive(image_loc, saliency_path, title, orig_cor)\n"
+    "    deep_dive(image_loc, saliency_path, title, orig_cor, invert=True)\n"
    ]
   }
  ],
