--- a/EigenCAM_on_fastRCNN.ipynb
+++ b/EigenCAM_on_fastRCNN.ipynb
@@ -649,12 +649,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display top and bottom n images (default n = 25, change is needed)\n",
-    "n = 5\n",
+    "# Display top, middle, and bottom n images (default n = 25, change is needed)\n",
+    "n = 25\n",
     "\n",
     "# Display most correlated images\n",
     "top_sorted_keys = sorted(keys, key=lambda x: x[2], reverse=True)\n",
     "display_images(main_dict, top_sorted_keys[0:n])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75bcbcb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display images with near 0 correlation\n",
+    "\n",
+    "# Display least correlated images\n",
+    "bot_sorted_keys = sorted(keys, key=lambda x: x[1])\n",
+    "display_images(main_dict, bot_sorted_keys[2500:2500+n])"
    ]
   },
   {
