--- a/EigenCAM_on_fastRCNN.ipynb
+++ b/EigenCAM_on_fastRCNN.ipynb
@@ -43,7 +43,7 @@
     "save_path = \"...Your path/val/backup.npy\"\n",
     "\n",
     "# Turn recovery mode to True if you want to use a backup \n",
-    "recovery_mode = False\n"
+    "recovery_mode = True\n"
    ]
   },
   {
